dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-argo-application
spec:
  selector:
    matchLabels:
      app: myapp-argo-application
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: myapp-argo-application
    spec:
      containers:
        - name: myapp-argo-application
          image: nginxdemos/hello:0.3
          ports:
          - containerPort: 80
