dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-argo-application
  namespace: default
spec:
  selector:
    app: myapp-argo-application
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: myapp-argo-application
    protocol: TCP
    port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort:
