dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-argo-application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myapp.docker
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-argo-application
                port:
                  number: 80
